--- a/src/app/components/bookDetail/book-detail/book-detail.component.scss
+++ b/src/app/components/bookDetail/book-detail/book-detail.component.scss
@@ -1,250 +1,240 @@
-// .bookdetails-main-cnt {
-//     width: 100%;
-//     // padding: 1% 12%;
-//     border: 2px solid green;
-// }
-// .book-details-cnt{
-//     border: 2px solid black;
-//     height: fit-content;
-//     width: 100%;
-//     display: flex;
-
-// }
-// .book-image-and-options{
-//     border: 2px solid black;
-//     height: fit-content;
-//     width: 80%;
-// }
-// .book-image {
-//     border: 2px solid rgb(216, 31, 31);
-//     // height: 30%; 
-//     height: 380px;
-//     width: 70%;     
-//     display: flex;
-//     justify-content: flex-end;
-//     align-items: center;
-//     // padding: 5% 8%; 
-//     box-shadow: 0 -4px 4px -4px rgba(0, 0, 0, 0.3), -4px 0 4px -4px rgba(0, 0, 0, 0.3), 
-//                 4px 0 4px -4px rgba(0, 0, 0, 0.3), 0 6px 6px -2px rgba(0, 0, 0, 0.2); 
-// }
-
-// .options {
-//     display: flex;
-//     flex-direction: row;
-//     gap: 5%; 
-//     margin-left: 7%; 
-// }
-
-// .book-details {
-//     display: flex;
-//     flex-direction: column;
-//     gap: 2%;
-//     padding-right: 20%;
-//     width: 85%; 
-//     border: 2px solid rebeccapurple;
-// }
-
-// .rating-quantity {
-//     display: flex;
-//     flex-direction: row;
-//     gap: 1%; 
-// }
-
-// /* For horizontal line */
-// .book-details hr {
-//     border-top: 1px solid black;
-//     margin: 2% 0; 
-// }
-
-// /* For stars */
-// .stars {
-//     font-size: 2.4vw; 
-//     outline-color: black;
-// }
-
-.bookdetails-main-cnt{
-    width:100%;
-    // border: 2px solid red;
-    padding: 2% 0% 0% 0%;
-}
-
-
-.back-to-dashbaord a{
-    text-decoration: none;
-    padding: 1.564% 0.700% 0.800% 10%;
-    cursor: pointer;
-
-}
-
-
-.book-details-cnt{
-    display: flex;
-    flex-direction: row;
-}
-.del {
-    text-decoration: line-through;
+.book-detail-main-cnt{
+    width: 73.4%;
+    margin-left: 179px;
   }
-
-.book-image-and-options {
-    display: flex;
-    flex-direction: column;
-    align-items: end;
-    width: 40%;
-    gap: 10px;
-    // border: 2px solid gold;
-}
-
-.book-image {
-    border: 2px solid rgb(205, 200, 200);
-    height: 300px;
-    width: 220px;
-    background: #F5F5F5;
-    padding: 10% 10%;
- }
-
- .options{
-   display: flex;
-   flex-direction: row;
-   padding: 0% 10% 0% 10% ;
-   gap: 10px;   
- }
-.cart-button{
-    background-color: maroon;
-    color: white;
-    width: 230%;
-}
-.quantity-update{
+  .home-book-text-cnt{
   display: flex;
   flex-direction: row;
-  gap:10px;
-  margin-top: 5px;
-}
-.symbol{
-    border: 1px solid black;
-    border-radius: 100%;
-    height: 24px; 
-    width: 24px; 
+  margin-top: 19px;
+  // padding: 79px 174px;
+  
+  }
+  .home-text{
+  top: 79px;
+  left: 174px;
+  width: 40px;
+  height: 16px;
+  /* UI Properties */
+  text-align: left;
+  font: normal normal normal 12px/16px Roboto;
+  letter-spacing: 0px;
+  color: #9D9D9D;
+  }
+  
+  .img-withtext-main-cnt{
     display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
-    
-}
-
-.number-of-books{
-    border: 1px solid black;
+    flex-direction: row;
+    left: 179;
+     margin-top:auto;
+  }
+  .small-img{
+   
+  margin-top: 66px;
+  }
+  
+  .image{
+    width: 361px;
+    height: 413px;
+  //  padding: 23px  39.38px 23px 40px;
+    margin-top: 67px;
+    background: #FFFFFF 0% 0% no-repeat padding-box;
+  border: 1px solid #D1D1D1;
+  border-radius: 2px;
+  img{
+    width: 281px;
+    height: 367px;
+    padding: 23px  39.38px 23px 40px;
+  }
+  }
+  
+  .add-bag-wishlist-btn-cnt{
+    padding-top: 20px;
     display: flex;
-    justify-content: center;
-    height: 24px; 
-    width: 40px; 
-    padding-top: 3px;
-}
-
-.wishlist-button{
-    background-color: gray;
-    color: white;
-    width: 260%;
-    height: 30px;
-
-}
-.wishlist-button-disable{
-    background-color: gray;
-    color: white;
-    width: 260%;
-    height: 30px;
-    padding: 7px 20px 0px 20px;
-}
-.wishlist-button::before {
-    font-size: 24px; 
-    vertical-align: middle;
-    content: '\2665'; 
-    margin-right: 10px; 
-}
-.book-details{
-    display: flex;
-    flex-direction: column;
-    gap:2%;
-    padding-right: 20%;
-    padding-left: 3%;
-    width: 40%;
-    // border: 2px solid green;
-}
-
-.rating-quantity{
+    flex-direction: row;
+    gap: 20px;
+  }
+  .addtobag-btn{
+    top: 560px;
+  left: 217px;
+  width: 170px;
+  height: 40px;
+  /* UI Properties */
+  background: #A03037 0% 0% no-repeat padding-box;
+  border-radius: 2px;
+  }
+  
+  .addtobag-btn-text{
+    top: 571px;
+  left: 262px;
+  width: 80px;
+  height: 18px;
+  /* UI Properties */
+  text-align: left;
+  font: normal normal medium 15px/18px Lato;
+  letter-spacing: 0px;
+  color: #FFFFFF;
+  text-transform: uppercase;
+  
+  }
+  
+  
+  .wishlist-btn{
+    top: 560px;
+  left: 408px;
+  width: 170px;
+  height: 40px;
+  /* UI Properties */
+  background: #333333 0% 0% no-repeat padding-box;
+  border-radius: 2px;
+  }
+  
+  .wishlist-btn-text{
+  
+    top: 571px;
+  left: 473px;
+  width: 69px;
+  height: 18px;
+  /* UI Properties */
+  text-align: left;
+  font: normal normal medium 15px/18px Lato;
+  letter-spacing: 0px;
+  color: #FFFFFF;
+  text-transform: uppercase;
+  }
+  
+  
+  .quantity-update{
     display: flex;
     flex-direction: row;
     gap:10px;
-}
-
-.rating{
-    border: 1px solid black;
-    background-color: green;
-    color: white;
-}
-
-.book-details h2,
-.book-details h3 {
-    margin: 0; 
-}
-
-.book-details hr {
-    border-top: 1px solid black;
-    margin: 20px 0; 
-  }
-  
-  .stars {
-    font-size: 24px;
-    outline-color:black ;
-  }
-  .feedback-cnt
-{
-    width: 100%;
-    background-color: #68676721;
-    border-radius: 4px;
-    padding: 10px;
-    // height: 100%;
-}
-.star_icon
-{
-    display: flex;
-    gap: 2.5%;
-}
-.input
-{
-    width: 100%;
-    height: 100%;
-}
-  .input input
-  {
-      height: 60px;
-      width: 100%;
-  }
-  .submit-btn
-  {
-      display: flex;
-      flex-direction: column;
-      align-items: end;
-      margin-right: -1%;
-  }
-  .name-cnt
-{
-    width: fit-content;
-    display: flex;
-    align-items: center;
-    // justify-content: center;
+    margin-top: 5px;
+    }
     
-}
-.name
-{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
-
-    background-color: rgba(55, 55, 55, 0.185);
-    height: 30px;
-    width: 30px;
-    border-radius: 100%;
-}
-
-//------------------------------------
+    .symbol{
+      border: 1px solid black;
+      border-radius: 100%;
+      height: 24px; 
+      width: 24px; 
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      &:hover{
+          cursor: pointer;
+      }
+      
+    }
+    .book-details{
+        margin-top: 67px;
+        display: flex;
+        flex-direction: column;
+        padding-left: 50px;
+            // border: 2px solid green;
+        }
+        .title{
+          margin-bottom: 1%;
+        }
+        .author-name{
+          text-align: left;
+          font: normal normal normal 10px/12px Lato;
+          letter-spacing: 0px;
+          color: #9D9D9D;
+          margin-bottom: 1%;
+        }
+        .book-price{
+          margin-top: 1%;
+          b{
+          text-align: left;
+          font: normal normal bold 15px/18px Lato;
+          letter-spacing: 0px;
+          color: #0A0102;
+          font-size: 20px;
+          }
+          del{
+            text-align: left;
+            text-decoration: line-through;
+            font: normal normal normal 13px/11px Lato;
+            letter-spacing: 0px;
+            color: #9D9D9D;
+          }
+        }
+        .rating-quantity{
+            display: flex;
+            flex-direction: row;
+            gap:10px;
+        }
+        
+        .rating{
+            border: 1px solid black;
+            background-color: green;
+            color: white;
+        }
+        .book-description{
+          text-align: left;
+          font: normal normal normal 13px/20px Roboto;
+          letter-spacing: 0px;
+          color: #878787;
+        }
+        .book-details h2,
+        .book-details h3 {
+            margin: 0; 
+        }
+        
+        .book-details hr {
+            border-top: 1px solid black;
+            margin: 20px 0; 
+          }
+          
+          .stars {
+            font-size: 24px;
+            outline-color:black ;
+          }
+          .feedback-cnt
+        {
+            width: 100%;
+            background-color: #68676721;
+            border-radius: 4px;
+            padding: 10px;
+            // height: 100%;
+        }
+        .star_icon
+        {
+            display: flex;
+            gap: 2.5%;
+        }
+        .input
+        {
+            width: 100%;
+            height: 100%;
+        }
+          .input input
+          {
+              height: 60px;
+              width: 100%;
+          }
+          .submit-btn
+          {
+              display: flex;
+              flex-direction: column;
+              align-items: end;
+              margin-right: -1%;
+          }
+          .name-cnt
+        {
+            width: fit-content;
+            display: flex;
+            align-items: center;
+            // justify-content: center;
+            
+        }
+        .name
+        {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        
+        
+            background-color: rgba(55, 55, 55, 0.185);
+            height: 30px;
+            width: 30px;
+            border-radius: 100%;
+        }
