--- a/src/app/components/bookstore-header/bookstore-header/bookstore-header.component.scss
+++ b/src/app/components/bookstore-header/bookstore-header/bookstore-header.component.scss
@@ -1,122 +1,231 @@
 .header-main-cnt {
+    display: flex;
+    justify-content: center;
     width: 100%;
-    background-color: rgb(147, 25, 25);
+    padding: 14px 0px;
+    height: 25px;
+    background: #a03037 0% 0% no-repeat padding-box;
+  }
+  
+  .inner-main-cnt {
+    width: 77%;
     display: flex;
-    justify-content: space-around;
-}
-
-.header {
+    justify-content: space-between;
+  }
+  
+  .img-span-search-cntr {
     display: flex;
-    align-items: center;
-    width: 80%;
-}
-
-.bookstore-icon {
+    gap: 42px;
+    width: 70%;
+  }
+  
+  .img-span-cntr {
     display: flex;
-    flex-direction: row;
-}
-
-.bookstore-icon img {
-    height: 23px;
-}
-
-.bookstore-icon span {
-    color: white;
-    padding: 0.5% 0% 0.25% 3%;
-    font-size: 120%;
-}
-
-.search-container {
-    display: flex;
-    align-items: center;
-    margin-left: 6%;
-}
-
-.search-input {
-    width: 550px;
-    height: 28px;
-    border-radius: 8px;
-    text-indent: 30px;
-}
-
-.search-icon {
-    height: 20px;
-    width: 15px;
-    margin-left: -550px;
-    line-height: 0px;
-}
-
-.profile {
-    display: flex;
-    flex-direction: column;
-    margin-left: 69%;
-    color: white;
-    font-size: 10px;
-    gap: 5px;
-    margin-top: 10px;
-    cursor: pointer;
-}
-
-.cart {
-    display: flex;
-    flex-direction: column;
-    margin-left: 25px;
-    color: white;
-    font-size: 10px;
-    gap: 5px;
-    margin-top: 10px;
-    cursor: pointer;
-}
-
-.profile-history {
-    // border: 2px solid red;
-    width: 280px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    // padding: 2% 4%;
     gap: 6px;
-}
-.profile-history span{
-    font-size: 18px;
-}
-
-.login-signup button {
-    border: 1px solid red;
-    // padding: 5px 10px;
-    // border-radius: 5px;
-    // margin-bottom: 5px;
-    color: red;
-}
-.login-signin{
-    // width: 100%;
-    width: 200px;
-    height: fit-content;
+    align-items: center;
+    span {
+      color: #ffffff;
+      text-align: left;
+      font: normal normal normal 20px/26px Roboto;
+      letter-spacing: 0px;
+    }
+  }
+  .book-img{
+    height: 20px;
+  }
+  .search-container {
+    width: 100%;
+    border-radius: 3px;
+    border: 1px solid #ccc;
+    background: #fcfcfc 0% 0% no-repeat padding-box;
+    padding: 3px;
+  }
+  
+  .search-input {
+    width: 70%;
+    border: none;
+    background: #fcfcfc 0% 0% no-repeat padding-box;
+    border-radius: 3px;
+    outline: none;
+  }
+  
+  .search-icon {
+    height: 12px;
+  }
+  
+  .profile-cart-cnt {
+    display: flex;
+    gap: 40px;
+    span {
+      text-align: left;
+      font: normal normal normal 10px/13px Roboto;
+      letter-spacing: 0.45px;
+      color: #ffffff;
+    }
+  }
+  
+  .profile mat-icon {
+    height: 16px;
+  }
+  
+  .profile {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 8px;
+  }
+  
+  .cart-cntr {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 8px;
+  }
+  
+  .cart-icon {
+    height: 16px;
+  }
+  
+  .header-profile {
+    background: #ffffff 0% 0% no-repeat padding-box;
+    box-shadow: 0px 3px 6px #00000029;
+    display: flex;
+    flex-direction: column;
+    padding: 16px 23px 19px 20px !important;
+    border: none !important;
+  }
+  
+  .span-cnt {
+    display: flex;
+    flex-direction: column;
+  }
+  
+  .welcome {
+    text-align: left;
+    font: normal normal medium 12px/16px Roboto;
+    letter-spacing: 0px;
+    color: #0a0102;
+  }
+  
+  .access {
+    text-align: left;
+    font: normal normal normal 12px/16px Roboto;
+    letter-spacing: 0px;
+    color: #878787;
+  }
+  
+  .login-signup {
+    width: 130px;
+    border: 1px solid #a03037;
+    border-radius: 2px;
+    margin: 11px 0px 15px 0px;
+  }
+  
+  .login-signup button {
+    width: 100%;
+    text-align: left;
+    font: normal normal normal 12px/16px Roboto;
+    letter-spacing: 0px;
+    color: #a03037;
+    background-color: #ffffff;
+    border: none;
+    padding-left: 40px;
+  }
+  
+  .myorders-img-icon {
     display: flex;
     align-items: center;
-    justify-content: center;
-    // margin: 10%;
-    flex-direction: column;
-    gap: 8px;
-    cursor: pointer;
-}
-.login-signin button{
-    border: 1px solid red;
-    // padding: 0px 10px;
-    border-radius: 5px;
-    // margin-bottom: 5px;
-    height: 30px;
-    width: 100px;
-    color: red;
-}
-
-@media only screen and (min-width: 300px) and (max-width: 500px) {
-    .bookstore-icon span {
-        display: none;
+    padding: 0px;
+    gap: 2px;
+    img{
+      height: 30px;
+      width: 30px;
     }
-    .search-input {
-        // width: none;
-        // height: 28px;    
+  }
+  .profile-icon{
+    height: 20px;
+  }
+  .order-icon {
+    width: 12px;
+    height: 12px;
+  }
+  
+  .MyOrders {
+    cursor: pointer;
+    text-decoration: none;
+    font: normal normal normal 12px/16px Roboto;
+    letter-spacing: 0px;
+    color: #878787;
+    opacity: 1;
+  }
+  
+  .heart-icon {
+    text-align: left;
+    font: normal normal normal 12px/16px Roboto;
+    letter-spacing: 0px;
+    color: #878787;
+  }
+  
+  .login-signin {
+    background: #ffffff 0% 0% no-repeat padding-box;
+    box-shadow: 0px 3px 6px #00000029;
+    display: flex;
+    flex-direction: column;
+    padding: 16px 23px 19px 20px !important;
+    border: none !important;
+    span {
+      text-align: left;
+      font: normal normal medium 12px/16px Roboto;
+      letter-spacing: 0px;
+      color: #0a0102;
+      opacity: 1;
+    }
+  }
+  
+  .profile-icon-container {
+    display: flex;
+    align-items: center;
+    margin: 8px 0px 0px 0px;
+    gap: 2px;
+  }
+  
+  .profile-icon-img {
+    width: 12px;
+    height: 12px;
+  }
+  
+  .profile-icon-text {
+    cursor: pointer;
+    text-decoration: none;
+    text-align: left;
+    font: normal normal normal 12px/16px Roboto;
+    letter-spacing: 0px;
+    color: #878787;
+  }
+  
+  .wishlist-icon-container {
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+    gap: 2px;
+  }
+  
+  .wishlist-icon-img {
+    width: 12px;
+    height: 12px;
+  }
+  
+  .wishlist-icon-text {
+    cursor: pointer;
+    color: inherit;
+    text-decoration: none;
+    text-align: left;
+    font: normal normal normal 12px/16px Roboto;
+    letter-spacing: 0px;
+    color: #878787;
+  }
+@media only screen and (min-width: 300px) and (max-width: 500px) {
+    .img-span-cntr span {
+        display: none;
     }
 }
