--- a/src/app/components/cart/cart/cart.component.scss
+++ b/src/app/components/cart/cart/cart.component.scss
@@ -43,6 +43,8 @@
     align-items: center;
     justify-content: space-between;
     flex-wrap: wrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .cart-inf-cnt
@@ -91,7 +93,7 @@
 }
 .count
 {
-    margin: 17px 0px 20px 0px ;
+    margin: 25px 0px 20px 0px ;
     row-gap: 95px;
     gap: 34px;
 }
@@ -246,24 +248,6 @@ height: 45px;
     flex-wrap: wrap;
  }
  //-----------------
-//  .continue-btn{
-//     padding: 0% 5%;
-//     margin-right: 3%;
-//     background: #3371B5 0% 0% no-repeat padding-box;
-//  }
-//  .content-order
-// {
-//     display: flex;
-//     flex-direction: row;
-//     flex-wrap: wrap;
-//     // border: 1px solid green;
-//     width: 88%;
-//     padding: 3% 6%;
-//     img{
-//         height:80px;
-//         display: flex;
-//     }
-// }
 .cart-order-cnt
 {
     background: #FFFFFF 0% 0% no-repeat padding-box;
