--- a/src/app/components/customerDetails/customer-details/customer-details.component.scss
+++ b/src/app/components/customerDetails/customer-details/customer-details.component.scss
@@ -1,309 +1,309 @@
-.back-to-dashbaord a{
-    text-decoration: none;
-    padding:10%;
-    cursor: pointer;
-}
-.back-to-dashbaord {
-    padding: 2% 0% 1% 0%;
-}
-.cart-outer-cnt
-{
-    height: fit-content;
-    width: 65%;
-    border: 1px solid rgba(130, 130, 130, 0.644);
-    background-color: rgba(163, 163, 163, 0.066);
-    margin-left: 11%;
-    border-radius: 4px;
-    margin-bottom: 1.5%;
-}
-.count-cnt
-{
-    display: flex;
-    align-items:center ;
-    justify-content: center;
-    flex-wrap: wrap;
-    gap: 60%;
-}
-.count-cnt span b{
-    font-size: 20px;
-}
-.loc-icon-cnt{
-    padding: 5px;
-    height: 18%;
-    width: fit-content;
-    border: 1px solid;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-wrap: wrap;
+// .back-to-dashbaord a{
+//     text-decoration: none;
+//     padding:10%;
+//     cursor: pointer;
+// }
+// .back-to-dashbaord {
+//     padding: 2% 0% 1% 0%;
+// }
+// .cart-outer-cnt
+// {
+//     height: fit-content;
+//     width: 65%;
+//     border: 1px solid rgba(130, 130, 130, 0.644);
+//     background-color: rgba(163, 163, 163, 0.066);
+//     margin-left: 11%;
+//     border-radius: 4px;
+//     margin-bottom: 1.5%;
+// }
+// .count-cnt
+// {
+//     display: flex;
+//     align-items:center ;
+//     justify-content: center;
+//     flex-wrap: wrap;
+//     gap: 60%;
+// }
+// .count-cnt span b{
+//     font-size: 20px;
+// }
+// .loc-icon-cnt{
+//     padding: 5px;
+//     height: 18%;
+//     width: fit-content;
+//     border: 1px solid;
+//     display: flex;
+//     align-items: center;
+//     justify-content: center;
+//     flex-wrap: wrap;
 
-}
-.loc-icon
-{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-wrap: wrap;
-    border: none;
-}
-.img-cnt
-{
-    height: 100%;
-    padding: 35px;
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    align-items: end;
-}
-.content img{
-    height:80px;
-    display: flex;
-}
-.content
-{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    flex-wrap: wrap;
-    // border: 1px solid green;
-    width: 40%;
-}
+// }
+// .loc-icon
+// {
+//     display: flex;
+//     align-items: center;
+//     justify-content: center;
+//     flex-wrap: wrap;
+//     border: none;
+// }
+// .img-cnt
+// {
+//     height: 100%;
+//     padding: 35px;
+//     display: flex;
+//     justify-content: space-between;
+//     flex-wrap: wrap;
+//     align-items: end;
+// }
+// .content img{
+//     height:80px;
+//     display: flex;
+// }
+// .content
+// {
+//     display: flex;
+//     flex-direction: row;
+//     align-items: center;
+//     flex-wrap: wrap;
+//     // border: 1px solid green;
+//     width: 40%;
+// }
 
-.booktitle
-{
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    font-size: large;
-    font-weight: 500;
-    padding-bottom: 4px;
-}
-.cart-detail{
-    padding-left: 29px;
-    // border: 1px solid red;   
-    width: 70%;
-}
-.rating-cnt{
-    padding-top: 7px;
-}
-.originalprice
-{
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    color: #616161;
-    text-decoration: line-through;
-    font-size: 80%;
-    font-weight: 100;
-}
-.sellingprice
-{
-    display: flex;
-    flex-wrap: wrap;
-    font-weight: bold;
-}
-.button
-{
-    // height: fit-content;
-    // border: 1px solid #df0a0a;   
-}
-.count
-{
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
-    width: 45%;
-    padding: 14px 0px 0px 0px;
-}
-.countvalue
-{
-    border: 1px solid black;
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    height: 20px; 
-    width: 40px; 
-    padding-top: 3px;
-}
-.symbol
-{
-    border: 1px solid black;
-    border-radius: 100%;
-    height: 24px; 
-    width: 24px; 
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    align-items: center;
-    cursor: pointer;
-}
-.bottom
-{
-    width: 65%;
-    border: 1px solid rgba(130, 130, 130, 0.644);
-    margin-left: 11%;
-    border-radius: 3px;
-    padding: 1% 0% 1% 0%;
-    margin-top: 1%;
-    display: flex;
-    align-items: center;
-    font-size: 20px;
-    flex-wrap: wrap;
+// .booktitle
+// {
+//     display: flex;
+//     flex-direction: column;
+//     flex-wrap: wrap;
+//     font-size: large;
+//     font-weight: 500;
+//     padding-bottom: 4px;
+// }
+// .cart-detail{
+//     padding-left: 29px;
+//     // border: 1px solid red;   
+//     width: 70%;
+// }
+// .rating-cnt{
+//     padding-top: 7px;
+// }
+// .originalprice
+// {
+//     display: flex;
+//     flex-direction: column;
+//     flex-wrap: wrap;
+//     color: #616161;
+//     text-decoration: line-through;
+//     font-size: 80%;
+//     font-weight: 100;
+// }
+// .sellingprice
+// {
+//     display: flex;
+//     flex-wrap: wrap;
+//     font-weight: bold;
+// }
+// .button
+// {
+//     // height: fit-content;
+//     // border: 1px solid #df0a0a;   
+// }
+// .count
+// {
+//     display: flex;
+//     justify-content: space-around;
+//     flex-wrap: wrap;
+//     width: 45%;
+//     padding: 14px 0px 0px 0px;
+// }
+// .countvalue
+// {
+//     border: 1px solid black;
+//     display: flex;
+//     justify-content: center;
+//     flex-wrap: wrap;
+//     height: 20px; 
+//     width: 40px; 
+//     padding-top: 3px;
+// }
+// .symbol
+// {
+//     border: 1px solid black;
+//     border-radius: 100%;
+//     height: 24px; 
+//     width: 24px; 
+//     display: flex;
+//     justify-content: center;
+//     flex-wrap: wrap;
+//     align-items: center;
+//     cursor: pointer;
+// }
+// .bottom
+// {
+//     width: 65%;
+//     border: 1px solid rgba(130, 130, 130, 0.644);
+//     margin-left: 11%;
+//     border-radius: 3px;
+//     padding: 1% 0% 1% 0%;
+//     margin-top: 1%;
+//     display: flex;
+//     align-items: center;
+//     font-size: 20px;
+//     flex-wrap: wrap;
 
-}
-// -----------------------------
-.address-detail{
-    width: 65%;
-    border: 1px solid rgba(130, 130, 130, 0.644);
-    margin-left: 11%;
-    height: fit-content;
-    border-radius: 3px;
-    // padding: 1% 0% 1% 0%;
-    margin-top: 1%;
-    // display: flex;
-    // align-items: center;
-    // font-size: 20px;
-}
-.address-header{
-font: normal normal medium 18px/24px Roboto;
-letter-spacing: 0px;
-color: #333232;
-display: flex;
-flex-direction: row;
-justify-content: space-between;
-flex-wrap: wrap;
-// border: 2px solid red;
-width: 100%;
-padding: 2% 0%;
- span{
-    font-size: 20px;
-    font-weight: 700;
-    padding-left: 4%;
- }
- button{
-    margin-right: 5%;
-    padding: 0px 30px;
-    border: 1px solid red;
-    border-radius: 5px;
- }
-}
-.address-main{
-   display: flex;
-//    border: 1px solid rgb(190, 190, 190) ;
-}
-.address-cnt textarea{
-    resize: none;
-    height: 60px;
-}
-.address-btn{
-    display: flex;
-    // border: 2px solid green;
-    width: 40%;
-    justify-content: end;
-    align-items: end;
-}
-.address-btn button{
+// }
+// // -----------------------------
+// .address-detail{
+//     width: 65%;
+//     border: 1px solid rgba(130, 130, 130, 0.644);
+//     margin-left: 11%;
+//     height: fit-content;
+//     border-radius: 3px;
+//     // padding: 1% 0% 1% 0%;
+//     margin-top: 1%;
+//     // display: flex;
+//     // align-items: center;
+//     // font-size: 20px;
+// }
+// .address-header{
+// font: normal normal medium 18px/24px Roboto;
+// letter-spacing: 0px;
+// color: #333232;
+// display: flex;
+// flex-direction: row;
+// justify-content: space-between;
+// flex-wrap: wrap;
+// // border: 2px solid red;
+// width: 100%;
+// padding: 2% 0%;
+//  span{
+//     font-size: 20px;
+//     font-weight: 700;
+//     padding-left: 4%;
+//  }
+//  button{
+//     margin-right: 5%;
+//     padding: 0px 30px;
+//     border: 1px solid red;
+//     border-radius: 5px;
+//  }
+// }
+// .address-main{
+//    display: flex;
+// //    border: 1px solid rgb(190, 190, 190) ;
+// }
+// .address-cnt textarea{
+//     resize: none;
+//     height: 60px;
+// }
+// .address-btn{
+//     display: flex;
+//     // border: 2px solid green;
+//     width: 40%;
+//     justify-content: end;
+//     align-items: end;
+// }
+// .address-btn button{
 
-    padding: 0% 2% 0% 2%;
-    height: fit-content;
-    font-size: 10px;
-}
-.old-address{
-    padding: 0% 3% 2% 6%;
-    // border: 1px solid red;   
-    width: 50%;
-}
+//     padding: 0% 2% 0% 2%;
+//     height: fit-content;
+//     font-size: 10px;
+// }
+// .old-address{
+//     padding: 0% 3% 2% 6%;
+//     // border: 1px solid red;   
+//     width: 50%;
+// }
 
-.customer-address
-{
-    width: 70%;
-    height: fit-content;
-    margin-left: 2%;
-    // border: 2px solid greenyellow;
-}
-.name-mobile-cnt
-{
-    display: flex;
-    justify-content: space-around;
-    margin-bottom: 2%;
-    flex-wrap: wrap;
+// .customer-address
+// {
+//     width: 70%;
+//     height: fit-content;
+//     margin-left: 2%;
+//     // border: 2px solid greenyellow;
+// }
+// .name-mobile-cnt
+// {
+//     display: flex;
+//     justify-content: space-around;
+//     margin-bottom: 2%;
+//     flex-wrap: wrap;
 
-}
-.field-cnt{
-    height: 100%;
-    width: 40%;
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    flex-wrap: wrap;
+// }
+// .field-cnt{
+//     height: 100%;
+//     width: 40%;
+//     display: flex;
+//     flex-direction: column;
+//     gap: 10px;
+//     flex-wrap: wrap;
 
-}
-.ip{
-    width: 70%;
-    height: 25px;
- }
- .address-cnt
- {
- margin-left: 5%;
- display: flex;
- flex-direction: column;
- gap: 10px;
- margin-bottom: 2%;
- flex-wrap: wrap;
+// }
+// .ip{
+//     width: 70%;
+//     height: 25px;
+//  }
+//  .address-cnt
+//  {
+//  margin-left: 5%;
+//  display: flex;
+//  flex-direction: column;
+//  gap: 10px;
+//  margin-bottom: 2%;
+//  flex-wrap: wrap;
 
- }
- .address-ip
- {
-     width: 98%;
-     height: 80px;
-     resize: none;
- }
- .city-town
- {
-     display: flex;
-     justify-content: space-around;
-     flex-wrap: wrap;
- }
- .value{
-text-align: left;
-font: normal normal normal 12px/16px Roboto;
-letter-spacing: 0px;
-color: #0A0102;
-text-transform: capitalize;
-opacity: 1;
-font-size: 15px;
- }
- .input-cnt{
-background: #FFFFFF 0% 0% no-repeat padding-box;
-border: 1px solid #acabab;
-border-radius: 2px;
-opacity: 1;
-padding: 4% 5%;
-width: 100%;
- }
- .type{
-    width: 70%;
-    margin-top: 3%;
-    margin-left: 5%;
+//  }
+//  .address-ip
+//  {
+//      width: 98%;
+//      height: 80px;
+//      resize: none;
+//  }
+//  .city-town
+//  {
+//      display: flex;
+//      justify-content: space-around;
+//      flex-wrap: wrap;
+//  }
+//  .value{
+// text-align: left;
+// font: normal normal normal 12px/16px Roboto;
+// letter-spacing: 0px;
+// color: #0A0102;
+// text-transform: capitalize;
+// opacity: 1;
+// font-size: 15px;
+//  }
+//  .input-cnt{
+// background: #FFFFFF 0% 0% no-repeat padding-box;
+// border: 1px solid #acabab;
+// border-radius: 2px;
+// opacity: 1;
+// padding: 4% 5%;
+// width: 100%;
+//  }
+//  .type{
+//     width: 70%;
+//     margin-top: 3%;
+//     margin-left: 5%;
 
- }
- .type-list{
-    // border: 1px solid green;
-    display: flex;
-    justify-content: space-between;
-    margin-top: 2%;
-    margin-bottom: 2%;
-    flex-wrap: wrap;
- }
- .continue{
-    display: flex;
-    justify-content: end;
-    flex-wrap: wrap;
- }
- .continue-btn{
-    padding: 0.6% 5%;
-    margin-right: 5%;
-    background: #3371B5 0% 0% no-repeat padding-box;
-    border-radius: 3px;
-    opacity: 1;
- }
+//  }
+//  .type-list{
+//     // border: 1px solid green;
+//     display: flex;
+//     justify-content: space-between;
+//     margin-top: 2%;
+//     margin-bottom: 2%;
+//     flex-wrap: wrap;
+//  }
+//  .continue{
+//     display: flex;
+//     justify-content: end;
+//     flex-wrap: wrap;
+//  }
+//  .continue-btn{
+//     padding: 0.6% 5%;
+//     margin-right: 5%;
+//     background: #3371B5 0% 0% no-repeat padding-box;
+//     border-radius: 3px;
+//     opacity: 1;
+//  }
