--- a/src/app/components/orderList/orderlist/orderlist.component.scss
+++ b/src/app/components/orderList/orderlist/orderlist.component.scss
@@ -1,82 +1,91 @@
-.heading-content{
-    // border: 1px solid red;
-    width: 100%;
+
+.orderlist-main-cnt{
+    width:74.8%;
+    margin-left: 174px;;
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+    flex-direction: column;
+    //margin:19px auto 174px auto;
 }
-.orderlist-items{
-    padding: 1.564% 0.700% 0.800% 10%;
+.title-nav
+{
+    width: 100%;
+    margin-top: 19px;
 }
-.items{
-    font-size: 1em;
-    font-weight: bold;
+.home-nav{
+    text-align: left;
+    font: normal normal normal 12px/16px Roboto;
+    letter-spacing: 0px;
+    color: #9D9D9D;
 }
-.home{
-    cursor: pointer;
+.order-nav{
+    text-align: left;
+    font: normal normal normal 12px/16px Roboto;
+    letter-spacing: 0px;
+    color: #0A0102;
 }
 .orderlist-cnt{
-    height: fit-content;
-    width: 65%;
+    width: 100%;
     background: #FFFFFF 0% 0% no-repeat padding-box;
-    border: 1px solid #DCDCDC;
-    border-radius: 3px;
-    margin-left: 10%;
-    // border-radius: 4px;
-    margin-bottom: 1.5%;
+    //border: 1px solid #E4E4E4;
+    margin-top: 17px;
+    //padding:34px 53px 34px 36px;
+    
 }
-.address-header{
-    width: 94%;
-    padding: 1.5% 3%;
-    // border: 2px solid red;
-    background-color: rgb(240, 240, 240);
-    span{
-        font-size: 20px;
-    }
-}
-
-.content
-{
+.orderlist-books-cnt{
     display: flex;
     flex-direction: row;
-    align-items: center;
-    flex-wrap: wrap;
-    border: 2px solid rgb(241, 240, 240);
-
+    gap:38px;  
+    padding:40px 40px 40px 36px; 
+    background: #FFFFFF 0% 0% no-repeat padding-box;
+    border: 1px solid #E4E4E4;
+    margin-bottom: 22.22px;
 }
-.book-img{
-    padding: 4% 3%;
-    width: 1%;
+.book-image-cnt{
+    width: 65px;
+    height: 85px;
+   // border:1px solid black;
 }
-.book-img img{
-    width: 700%;
-}
-
-.booktitle
+.book-details
 {
     display: flex;
     flex-direction: column;
-    flex-wrap: wrap;
-    font-size: large;
-    font-weight: 500;
-    padding-bottom: 4px;
-    font-size: 24px;
+    flex-grow: 1; /* Added to take up available space */
 }
-.cart-detail{
-    // border: 2px solid red;
-    width: 65%;
-    padding-left: 4%;
-}
-.rating-cnt{
-    padding-top: 9px;
-    display: flex;
 
+.book-name{
+    text-align: left;
+     font: normal normal normal 18px/24px Roboto;
+     letter-spacing: 0px;
+     color: #0A0102;
 }
-.offer{
-    text-decoration: line-through;
-    font-size: 15px;
+.author-name{
+    text-align: left;
+    font: normal normal normal 12px/16px Roboto;
+    letter-spacing: 0px;
+    color: #9D9D9D;
+    margin-top: 5px;
 }
-.ordered-date{
-    // width: 10%;
-    padding-bottom: 60px;
+.price{
+    text-align: left;
+    font: normal normal bold 15px/20px Roboto;
+    letter-spacing: 0px;
+    color: #0A0102;
+    margin-top: 13px;
 }
+
+.empty-orderlist{
+    width: 100%;
+    margin-top: 17px;
+}
+.circle-list {
+    list-style-type: disc;
+    color: green; /* Change the color to green */
+}
+
+.order-date{
+    text-align: left;
+    font: normal normal bold 15px/20px Roboto;
+    letter-spacing: 0px;
+    color: #0A0102;
+}
+
